add mapping image by css

--- a/index.html
+++ b/index.html
@@ -3,29 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Компьютерные сети</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <h1 style="text-align: center;"> Лабараторная работа №8</h1>
     <hr>
+    <p>Через map</p>
     <img src="rect.jpg" width="200" height="200" usemap="#map">
     <map name="map">
-        <area shape="poly" coords="0,0, 100, 0, 0, 200" onclick="area1()">
-        <area shape="poly" coords="0, 200, 200, 200, 100,0" onclick="area2()">
-        <area shape="poly" coords="100, 0, 200, 0, 200,200" onclick="area1()">
+        <area shape="poly" coords="0,0, 100, 0, 0, 200" onclick="area()">
+        <area shape="poly" coords="0, 200, 200, 200, 100,0">
+        <area shape="poly" coords="100, 0, 200, 0, 200,200" onclick="area()">
     </map>
     <br>
-    <img src="boobs.gif">
+    <p>Через СSS</p>
+    <div class="background">
+        <div class="block0" onclick="area()"></div>
+        <div class="block1" onclick="area()"></div>
+    </div>
+
+    <!--<img src="boobs.gif">-->
     <script>
-	    function area1(){
-	        alert("1");
-	    }
-	    function area2(){
-	        alert("2");
+	    function area(){
+	        alert("Область нажатия");
 	    }
     </script>
     <br>
+
+    <!--
     <video controls="controls" autoplay loop><source src="shaaaa.mp4"></video>
     <br>
-    <audio controls autoplay loop id="audio"><source src="Hellnation%20-%20No%20Fan%20Of%20Cops.mp3"></audio>
+    <audio controls autoplay loop id="audio"><source src="Hellnation%20-%20No%20Fan%20Of%20Cops.mp3"></audio>-->
 </body>
 </html>
